--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,3 +1,12 @@
+@article{wattenberg2016how,
+  author = {Wattenberg, Martin and Viégas, Fernanda and Johnson, Ian},
+  title = {How to Use t-SNE Effectively},
+  journal = {Distill},
+  year = {2016},
+  url = {http://distill.pub/2016/misread-tsne},
+  doi = {10.23915/distill.00002}
+}
+
 @article{shlens2014tutorial,
   title={A tutorial on principal component analysis},
   author={Shlens, Jonathon},
