--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -465,8 +465,9 @@ of the Federal Emergency Management Agency (FEMA)[^9]. Two datasets are made ava
 with exposure information, and a claims dataset with claims transactions, including paid amounts. Because there is no 
 way to associate records of the two datasets, we are limited to fitting severity models on the claims dataset. While 
 the 
-complete dataset contains over two million transactions, for the purposes of our experiments we limit ourselves to data 
-from 2000 to August 2019, which amounts to approximately 1.4 million claims. The dataset can be downloaded from 
+complete dataset contains over two million transactions, for the purposes of our experiments, we limit ourselves to 
+data from 2000 to August 2019 and further subsample 100K data points to make experiments feasiable on a CPU.
+ The dataset can be downloaded from 
 Cellar[^10] The dataset includes a rich variety of variables, from occupancy type to coarse coordinates. For our 
 models, 
 we work with a few selected variables that represent continuous and discrete variables of low and high cardinalities, 
@@ -587,11 +588,12 @@ Table: (\#tab:relativities) Excerpt of relativities for Model 1.
 For Model 2, we build a feedforward neural network, whose architecture is shown in Figure \@ref(fig:nn-1). 
 The categorical inputs go through one-dimensional embedding
 layers where they are each mapped to a scalar. The embeddings are then concatenated with the numeric predictors, which
-have been normalized in data pre-processing, before being passed through a feedforward layer (with ReLU activation)
+have been normalized in data pre-processing, before being passed through a feedforward layer (with 8 hidden units 
+and ReLU activation)
  to obtain a scalar
 value between 0 and 1, as constrained by a sigmoid output activation. This scalar output represents the proportion of
 coverage amount that is paid out, so we multiply it by the unnormalized dollar amount of the coverage amount to obtain
-our prediction of the claims paid.
+our prediction of the claims paid, which we evaluate using the mean squared error (MSE) loss function.
 
 ```{r nn-1, echo = FALSE, fig.cap = "Architecture of Models 2 and 4.", out.width = "80%", fig.align = "center"}
 knitr::include_graphics("images/nn.png")
