--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -466,15 +466,13 @@ with exposure information, and a claims dataset with claims transactions, includ
 way to associate records of the two datasets, we are limited to fitting severity models on the claims dataset. While 
 the 
 complete dataset contains over two million transactions, for the purposes of our experiments, we limit ourselves to 
-data from 2000 to August 2019 and further subsample 100K data points to make experiments feasiable on a CPU.
- The dataset can be downloaded from 
-Cellar[^10] The dataset includes a rich variety of variables, from occupancy type to coarse coordinates. For our 
+data from 2000 to August 2019 and further subsample 100K data points to make experiments feasible on a CPU.
+The dataset includes a rich variety of variables, from occupancy type to flood zone. For our 
 models, 
 we work with a few selected variables that represent continuous and discrete variables of low and high cardinalities, 
 which we list in Table \@ref(tab:variables)
 
 [^9]: https://www.fema.gov/about/reports-and-data/openfema
-[^10]: https://cellar.kasa.ai 
 
 ```{r variables, results='asis', message=FALSE, echo = FALSE}
 library(magrittr)
@@ -502,7 +500,7 @@ knitr::kable(
 The response variable we take from the dataset is "Amount Paid on Building Claim", which is a numeric variable.
 
 For our experiments, we set up a 5-fold cross validation scheme that is applied to each of the models
-we introduce. In Sections \ref{models} and \ref{interpretations}, the tables and figures are based on a single fold of 
+we introduce. In Sections \ref{models} and \ref{interpretation}, the tables and figures are based on a single fold of 
 the cross validation split. In Section \ref{training-inference}, we provide the cross-validated performance
 metrics of each of the models.
 
@@ -518,8 +516,8 @@ commentary on recommended practices in practical applications, especially with r
 In this subsection, we develop the following models:
 
 1. A GLM with gamma distribution and log link function,
-2. A neural network with unidimensional categorical embeddings,
-3. A GLM with the categorical predictors replaced by the trained embeddings from Model 2,
+2. A neural network with one-dimensional categorical embeddings,
+3. A GLM with the categorical predictors replaced by the learned embeddings from Model 2,
 4. A neural network with multidimensional categorical embeddings.
 
 These model architectures are relatively uncomplicated by today's standards, and are so chosen to better highlight the
@@ -529,7 +527,7 @@ that represent the state of the art for modeling tabular data.
 ### Model 1: GLM 
 
 While this paper focuses on embeddings in neural networks, we begin with a GLM to provide a common frame of 
-reference since most actuaries are familiar with the technique. 
+reference, since most actuaries are familiar with the technique. 
 Although GLMs are commonplace and well-studied in the actuarial literature, there are still plenty of decisions to 
 be made in the modeling process; see, for example, @Goldburd for an in-depth discussion. For our purpose of 
 establishing a baseline, we proceed with what we perceive as reasonable decisions around feature engineering and model structure, outlined below:
@@ -563,9 +561,9 @@ each categorical variable.
 
 In Table \@ref(tab:relativities), we exhibit an exerpt of the relativities, or exponentiated fitted coefficients, 
 of a couple categorical variables. Recall that the choice of the log link gives a multiplicative structure, so the
-interpretation of 1.37 for `occupancy_type = "Non-residential building"` is that, all else equal, the expected 
+interpretation of 1.34 for `occupancy_type = "Non-residential building"` is that, all else equal, the expected 
 loss for
-a policy for a non-residential building is 1.37 times that of a policy for a single family home, which is the base,
+a policy for a non-residential building is 1.34 times that of a policy for a single family home, which is the base,
 or reference, level for the factor.
 
 Table: (\#tab:relativities) Excerpt of relativities for Model 1.
@@ -592,8 +590,8 @@ have been normalized in data pre-processing, before being passed through a feedf
 and ReLU activation)
  to obtain a scalar
 value between 0 and 1, as constrained by a sigmoid output activation. This scalar output represents the proportion of
-coverage amount that is paid out, so we multiply it by the unnormalized dollar amount of the coverage amount to obtain
-our prediction of the claims paid, which we evaluate using the mean squared error (MSE) loss function.
+coverage amount that is paid out, which we then multiply by the dollar amount of the coverage amount to obtain
+our prediction of the claims paid. For optimization, we use the mean squared error (MSE) loss function.
 
 ```{r nn-1, echo = FALSE, fig.cap = "Architecture of Models 2 and 4.", out.width = "80%", fig.align = "center"}
 knitr::include_graphics("images/nn.png")
@@ -603,14 +601,14 @@ With a single hidden layer, this architecture is relatively simple; without the 
 corresponding ReLU activation, we would actually recover a logistic regression structure. 
 The choice of one for the embedding dimension is also due to simplicity: it is easily interpretable as the 
 representation
-of each factor level as a point on the real number line, also, the trained embeddings are easily incorporated into a GLM
+of each factor level as a point on the real number line; also, the trained embeddings are easily incorporated into a GLM
 which we will see in Model 3. In practice, the embedding dimension is a hyperparameter one can tune, for example via
 cross validation, and can vary for each variable. However, we also note that the choice of one for the 
 embedding output dimension is not an unreasonable one, especially when the cardinalities of the categorical variables
-are not unusually large.
+are not large (i.e., when they are in the 10s).
 
 In Tables \@ref(tab:embeddings-occupancy-type) and \@ref(tab:embeddings-flood-zone), we show the learned embeddings
-for the `occupancy_type` and an excerpt of them for `flood_zone`. While it may be tempting to compare these values
+for `occupancy_type` and an excerpt of them for `flood_zone`. While it may be tempting to compare these values
 to those in Table \@ref(tab:relativities), they represent fundamentally different concepts. It is helpful to think
 of the embedding values for each variable as a continuous represention of the variable itself, rather than a 
 "coefficient" associated with the variable. Note that it is not straightforward to inspect the embeddings from a
