--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -521,7 +521,7 @@ In this subsection, we develop the following models:
 4. A neural network with multidimensional categorical embeddings.
 
 These model architectures are relatively uncomplicated by today's standards, and are so chosen to better highlight the
-embedding components. Later, in Section \ref{attn}, we will investigate more involved architectures utilizing embeddings
+embedding components. Later, in Section \ref{attention_models}, we will investigate more involved architectures utilizing embeddings
 that represent the state of the art for modeling tabular data.
 
 ### Model 1: GLM 
@@ -759,7 +759,7 @@ neighbor embedding (t-SNE; @Maaten2008a), both of which we illustrate.
 
 ### Principal Component Analysis
 
-In both approaches, the overarching theme is as follows: We have a collection of points in higher dimensional space,
+In both approaches, the overarching theme is as follows: we have a collection of points in higher dimensional space,
 $\mathcal{X} = \{x_1, x_2, \dots, x_n\}$ that we wish to map to some lower dimensional space, typically $\mathbb{R}^2$,
 obtaining $\mathcal{Y} = \{y_1, y_2, \dots, y_n\}$. PCA performs a linear change of coordinates on 
 the input data so that the variance of the data is maximized along each orthogonal coordinate, also known as
@@ -778,7 +778,7 @@ clusters in the plot. From inspecting the matrix decomposition results, we see t
 variance for the first two principal components are just 0.18, which may suggest that perhaps PCA is not the most
 appropriate dimensionality reduction technique in this case.
 
-```{r flood-zone-pca, echo = FALSE, fig.cap="Flood zone PCA", out.width = "50%", fig.align = "center"}
+```{r flood-zone-pca, echo = FALSE, fig.cap="First two principal components of learned embeddings of flood zone in Model 4.", out.width = "50%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_pca.png")
 ```
 
@@ -790,13 +790,13 @@ in the lower dimensional space which have similarity metric values (for a differ
 points in the original data.
 
 Let $p_{j|i}$ denote the probability that point $x_i$ picks point $x_j$ as its *neighbor*, if it picks neighbors in
-proportion to their density under an $n$-dimension Gaussian centered at $x_i$. Formally, we can write $p_{j|i}$ as
+proportion to its density under an $n$-dimension Gaussian centered at $x_i$. Formally, we can write $p_{j|i}$ as
 
 \begin{equation}
-p_{j|i} = \frac{\exp(\norm{x_i - x_j}^2 / 2\sigma_i^2)}{\sum_{k\neq i} \exp(-\norm{x_i - x_k}^2 / 2\sigma_i^2)}. (\#eq:pji)
+p_{j|i} = \frac{\exp(\norm{x_i - x_j}^2 / 2\sigma_i^2)}{\sum_{k\neq i} \exp(-\norm{x_i - x_k}^2 / 2\sigma_i^2)}, (\#eq:pji)
 \end{equation}
-
-The similarity metric for the originals space symmetrizes this conditional probability and is defined as
+where $\sigma_i^2$ denotes the variance of the Gaussian associated with $x_i$. The similarity metric for the original
+ space symmetrizes this conditional probability and is defined as
 
 \begin{equation}
 p_{ij} = \frac{p_{j|i} + p_{i|j}}{2n}.
@@ -842,12 +842,12 @@ be very sensitive to the perplexity hyperparameter. In addition, for our use cas
 learned embeddings, we have fewer data points than most other applications in the literature. Accordingly, our
 reaosnable range of hyperparameter values need to be adjusted down.
 In Figures \@ref(fig:flood-zone-tsne), we display the t-SNE of the learned embeddings for `flood_zone` in
-Model 3 with various perplexity settings: 0.1, 0.5, 1.0, and 10; the learning rate and the number of steps are fixed at
+Model 3 with various perplexity settings: 2, 3, 5, and 10; the learning rate and the number of steps are fixed at
 100 and 10,000, respectively, for all plots. In the first three plots, we can see the semblance of clusters forming. In
 particular, flood zone D appears in its own cluster, which implies it is far away from other levels in the embedding
-space. When the perplexity is set to 10 (and beyond), however, we lose the geometric properties.
+space. When the perplexity is set to 10 (and beyond), however, we start to lose the geometric properties.
 
-```{r flood-zone-tsne, echo = FALSE, fig.cap="Flood zone t-SNE", out.width = "60%", fig.align = "center"}
+```{r flood-zone-tsne, echo = FALSE, fig.cap="t-SNE plots of learned embeddings of flood zone in Model 4, with various perplexity values. From left to right then top to bottom: 2, 3, 5, and 10.", out.width = "60%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_tsne.png")
 ```
 
@@ -881,7 +881,7 @@ check reasonablness of other models' results. Since it is possible for a linear
 regression to output negative values, we cap the predictions below by 0.01 during scoring. Somewhat surprisingly, in 
 the problem we
 are considering, it performs similary to the more complex neural network models in the RMSE metric (which it optimizes
-for, as the unit deviance of the normal distribution corresponds with MSE.) Of course, this is not to discredit neural
+for, as the unit deviance of the normal distribution correspond to MSE.) Of course, this is not to discredit neural
 networks or GLMs, as the experiments are performed without extensive hyperparameter tuning or feature engineering.
 
 Table: (\#tab:cv-results) Cross validation results.
