--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -938,7 +938,7 @@ knitr::include_graphics("images/sna2.pdf")
 Whereas Model 5 makes a simple modification to the structure of Model 4, the TabTransformer model is slightly more complex. With respect to
 similarities between Model 5 and 6, both use embeddings with a standard 8 dimensions for each categorical covariate. In terms of differences,
 Model 6 uses a Transformer layer in place of self-attention and a positional encoding of a single dimension, i.e. $d_col = 1$. The TabTransformer
-architecture is shown in Figure Figure \@ref(fig:nn-3).
+architecture is shown in Figure \@ref(fig:nn-3).
 
 
 ```{r nn-3, echo = FALSE, fig.cap = "Architecture of Model 6.", out.width = "80%", fig.align = "center"}
@@ -953,9 +953,10 @@ We follow a similar training setup for the three attention based models, to the 
 we utilize the \texttt{Adam} optimizer as before, however, due to the increased complexity of the models in this section,
 we use learning rate of 0.001 (compared to 0.01 for the simpler models). Reflecting this reduced learning rate, 
 we train on the analysis set for a maximum of 150 epochs, and select the best model based on the lowest loss achieved on the assessment. Moreover, since these models are
-more complex than those tested in the previous section, we also add some minimal regularization using dropout [@srivastava2014dropout] to the attention layers 
-and the last layer of the network. Dropout functions by setting some components of the network randomly to zero during each epoch of training. This forces each
-component of the network to learn an independent representation of the data. In this section, we drop out components with a probability of 2.5\%. A final detail is that, 
+significantly more complex than those tested in the previous section, we also add some minimal regularization using dropout [@srivastava2014dropout] to the attention layers 
+and the last layer of the network, to prevent overfitting. Dropout functions by setting some components of the network randomly to zero during each epoch of training. 
+This forces each component of the network to learn a somewhat independent representation of the data, thus helping to avoid overfitting by preventing components of the 
+network from becoming too specialized. In this section, we drop out components with a probability of 2.5\%. A final detail is that, 
 for both of these models, we use an embedding dimension of size 16 for each of the categorical covariates, since the attention mechanism requires that the embeddings 
 be of a common length. For the TabTransformer model, we use a row embedding of dimension 4.
 
@@ -964,30 +965,82 @@ times did not lead to improved performance).
 
 In Table \@ref(tab:cv-results-attn), we show the cross-validated performance metrics of each of the models, 
 as well as the two best performing models from the previous section. As before, we report both the root mean squared error (RMSE) 
-and the mean absolute error (MAE). The results show that Model 5, which simply adds attention to Model 4, achieves slightly worse
-performance than Model 4 as measured by the RMSE, but using the MAE as a metric, outperforms Model 4. Thus, there is some room to argue that
-for tabular data modelling that uses embeddings, the use of attention within models should be considered. Disappointingly, the TabNet 
-architecture performs poorly, perhaps due to insufficient hyperparameter tuning, but indicating that ``out of the box", TabNet does not
-appear to work well for this modelling task. Finally, the TabTransformer model shows the best performance of all models considered in 
-this research, beating the others by a significant margin on both the RMSE and MAE metrics.
+and the mean absolute error (MAE). The results show that Model 5, which simply adds attention to Model 4, outperforms Model 4 on both the RMSE and 
+MAE metrics. Thus, there is some room to argue that for tabular data modelling that uses embeddings for categorical data, 
+the use of attention within models should be considered. Disappointingly, the TabNet architecture performs poorly, perhaps due to insufficient hyperparameter tuning, 
+but indicating that ``out of the box", TabNet does not appear to work well for this modelling task. Finally, the TabTransformer model shows the best performance of all
+ models considered in this research, beating the other models by a significant margin on both the RMSE and MAE metrics.
 
 Table: (\#tab:cv-results-attn) Cross validation results for Models 5-7.
 
 |Model                                                                          |   RMSE|    MAE|
 |:-----------------------------------------------------------------------------|------:|------:|
 |Model 4: MLP with multidimensional embeddings                                 | 60,973| 37,574|
-|Model 5: Simple Attention                                                     | 61,022| 37,025|
+|Model 5: Simple Attention                                                     | 60,601| 36,739|
 |Model 6: TabNet                                                               | 62,938| 38,386|
 |Model 7: TabTransformer                                                       | 59,900| 36,343|
 |Linear regression, predictions capped below at 0.01                           | 60,879| 38,431|
 
 In what follows, we focus on understanding the TabTransformer model in more detail.
 
-## Explaining Attention Based models
+## Exploring the TabTransformer model
+
+Here, we explore what the TabTransformer model has learned from the data via the attention process that forms the core of the model. We focus on the difference 
+between the flood embedding learned by the model, compared with the output of the Transformer layer that processes the embeddings before these enter the model. 
+@Huang2020 call the latter ``contextual embeddings", because the attention mechanism within the TabTransformer model augments the embeddings based on the 
+other covariates that appear for each observation $i$. 
+
+To illustrate this, we selected a single TabTransformer fit on one fold of the training data, and selected at random 10 000 individual observations. For each
+observation, the embedding relating to the flood zone of the observation was extracted from the model, as well as the contextual embedding that was produced 
+for that observation by the TabTransformer model. We found that a PCA and t-SNE analysis of the embeddings produced very similar results to those shown in the previous section,
+so we do not show these plots here. To investigate the difference between the embeddings and contextual embeddings for the `flood_zone` variable, 
+we show the first component from a PCA analysis of each of these in Figure \@ref(fig:embd). 
+
+```{r embd, echo = FALSE, fig.cap = "Embedding versus Contextual Embedding, Flood Zone, first PCA components", out.width = "80%", fig.align = "center"}
+knitr::include_graphics("images/emb_vs_cembd.pdf")
+```
+
+The figure shows that, whereas the first principal component of the embeddings occupy discrete points only (shown on the $x$-axis), 
+the first principal component of the **contextual** embeddings is continuous (shown on the $y$-axis), meaning that the model has modified the values
+of the embedding in a smooth manner. Since the inputs to the attention mechanism which is responsible for this are the embeddings for the other categorical
+variables for each observation, these other variables have influenced the final embedding used within the model for the `flood_zone` variable. By considering 
+each of the other categorical variables entering the model, it was found that the basement enclosure crawl space variable explains most of the variation
+observed within the flood zone embeddings, as shown in Figure \@ref(fig:embdexp). The attention mechanism produces the lowest values for those observations
+with an unfinished basement, whereas the model produces the highest values for buildings without a crawl space. 
+
+```{r embdexp, echo = FALSE, fig.cap = "Embedding versus Contextual Embedding, Flood Zone, first PCA components, points coloured based on crawl space variable", out.width = "80%", fig.align = "center"}
+knitr::include_graphics("images/emb_vs_cembd_exp.pdf")
+```
+To investigate the predictive value added by the contextual embeddings, a simple Gamma GLM was fit to these 10 000 observations, with the goal of predicting the 
+claim amount based only on either the embeddings or the contextual embeddings. As shown in Table \@ref(tab:emd-vs-cembd), the performance of the latter model, 
+as indicated by the Aikaike Information Criterion (AIC) was significantly better than the latter model (37 129 compared with 37 463), 
+in other words, the contextual embeddings that incorporate information across all of the categorical variables are significantly better predictors 
+of claim severity compared with the embeddings.
+
+Table: (\#tab:emd-vs-cembd) AIC for GLMs predicting claim severity, embeddings compared with contextual embeddings.
+
+|Embedding Type       |      AIC|
+|:--------------------|--------:|
+|Embedding            | 37,464|
+|Contextual embedding | 37,129|
+
 
 # Conclusions {#Conclusions}
 
-Conclusions
+This study has focused on how embeddings can be applied within the context of actuarial modelling, by illustrating a range of approaches: first, relatively simple
+neural networks with embeddings were defined, the embeddings from these models were reused within traditional GLM models and, finally, more advanced attention based models 
+were studied. These models were demonstrated within the context of a claims severity modelling problem based on data from the NFIP. Whereas we have only considered severity 
+in this study, it is likely that our findings will replicate for the modelling of claim frequency, which is usually an easier problem. Our key findings are that 
+processing categorical variables with multi-dimensional embeddings leads to enhanced performance within simple neural networks, and that, by including these within traditional
+GLM models, the predictive performance of these models can be enhanced, compared to the usual encoding scheme for categorical variables. Some of the attention based models 
+considered within this study performed well, in particular, the TabTransformer model of @Huang2020 appears quite promising for use in actuarial modelling. The study has also 
+illustrated how embeddings can be visualized using the PCA and t-SNE techniques. We found that, in the case of the NFIP data, it is possible to explain which variables modify 
+the embeddings based on the context of each observation.
+
+Several avenues for future research can be considered. One surprising finding of our work is that the TabNet model performed quite poorly, leading us to conclude that this 
+model appears to be less suitable for actuarial modelling. Understanding these findings in more detail would be a valuable contribution to the literature. Another helpful contribution
+would be to investigate the optimal hyperparameters for the TabTransformer model in the context of actuarial modelling. Finally, extneding our findings to a claims frequency example
+could be considered.
 
 \newpage
 
